Fixed flex wrap issues

--- a/fe/src/components/FileList/FileList.scss
+++ b/fe/src/components/FileList/FileList.scss
@@ -15,6 +15,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .FileListItem {
@@ -26,6 +27,7 @@
   min-width: 8rem;
 
   margin-right: 2rem;
+  margin-bottom: 2rem;
   padding: 1rem;
 
   background-color: white;
